--- a/index.html
+++ b/index.html
@@ -1,3 +1,78 @@
-Hello world!
-
-<a href="notebooks/html/gradient_descent_basics.html">Gradient Descent<a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>SELENE (Quick Access)</title>
+<!-- Internal CSS Styles -->
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.25;
+        }
+        .container {
+            width: 95%;
+            margin: auto;
+            overflow: hidden;
+            padding: 2px 0;
+        }
+        header {
+            background: rgb(2 6 23);
+            color: #ffffff;
+            padding-top: 5px;
+        }
+        h1 {
+            margin-top: 0;
+        }
+        /* Default link style */
+        a {
+            text-decoration: none;  /* removes underline */
+            color: #007bff;         /* choose your link color */
+            transition: color 0.3s; /* smooth color change on hover */
+        }
+        /* Hover style */
+        a:hover {
+            color: #0056b3;         /* color changes when mouse is over the link */
+        }        
+        section {
+            padding: 10px;
+            background: #ffffff;
+            margin-top: 0px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background: rgb(2 6 23);
+            color: #ffffff;
+            padding: 2px 0;
+            margin-top: 0px;
+        }
+    </style>
+</head>
+<body>
+<header>
+<div class="container">
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="margin:auto;max-width:250px;width:100%"/>
+</div>
+</header>
+<section id="main-content">
+<div class="container">
+<h2>Notebooks</h2>
+<p>This is a simple single-page HTML template. All content and styles are contained within this one file.</p>
+<table id="notebook-table">
+<tbody>
+<!-- rows will be inserted here -->
+<tr><td><a href="notebooks/html/artificial_neural_networks_basics.html">Artificial Neural Networks (Basic Architecture)</a></td></tr><tr><td><a href="notebooks/html/attention_mha_basics.html">Attention &amp; Multi-Head Attention</a></td></tr><tr><td><a href="notebooks/html/backpropagation_basic_examples.html">Backpropagation</a></td></tr><tr><td><a href="notebooks/html/backpropagation_generalization.html">Backpropagation (Generalization)</a></td></tr><tr><td><a href="notebooks/html/bias_variance_ml_basics.html">Bias &amp; Variance (Machine Learning)</a></td></tr><tr><td><a href="notebooks/html/bias_variance_ml_decomposition.html">Bias-Variance Decomposition</a></td></tr><tr><td><a href="notebooks/html/llm_building_gptstyle_llm_from_scratch.html">Building a GPT-Style LLM from Scratch</a></td></tr><tr><td><a href="notebooks/html/word_tokenizer_implementation.html">Building a Word Tokenizer from Scratch</a></td></tr><tr><td><a href="notebooks/html/byte_pair_encoding_tokenization.html">Byte-Pair Encoding Tokenization</a></td></tr><tr><td><a href="notebooks/html/curse_of_dimensionality.html">Curse of Dimensionality</a></td></tr><tr><td><a href="notebooks/html/llm_training_data_preparation_batching.html">Data Batching for Training LLMs</a></td></tr><tr><td><a href="notebooks/html/llm_training_data_preparation_basics.html">Data Preparation for Training LLMs — An Overview</a></td></tr><tr><td><a href="notebooks/html/decision_trees_basics.html">Decision Trees</a></td></tr><tr><td><a href="notebooks/html/decision_trees_cart.html">Decision Trees — CART (Classification and Regression Trees)</a></td></tr><tr><td><a href="notebooks/html/gradient_descent_basics.html">Gradient Descent — The Very Basics</a></td></tr><tr><td><a href="notebooks/html/handwritten_digit_recognition_ann.html">Handwritten Digit Recognition with Artificial Neural Networks (ANNs)</a></td></tr><tr><td><a href="notebooks/html/ann_from_scratch_numpy_only.html">Implementing an ANN from Scratch (NumPy only)</a></td></tr><tr><td><a href="notebooks/html/language_models_basics.html">Language Models</a></td></tr><tr><td><a href="notebooks/html/linear_regression_basics.html">Linear Regression</a></td></tr><tr><td><a href="notebooks/html/linear_regression_assumptions_caveats.html">Linear Regression — Assumptions &amp; Caveats</a></td></tr><tr><td><a href="notebooks/html/llm_model_finetuning_lora_hf_kidsqa.html">LoRA Fine-Tuning — A Basic Example</a></td></tr><tr><td><a href="notebooks/html/logistic_regression_basics.html">Logistic Regression — Basics</a></td></tr><tr><td><a href="notebooks/html/logistic_regression_math.html">Logistic Regression: The Math</a></td></tr><tr><td><a href="notebooks/html/knowledge_distillation_logit_distillation.html">Logit Distillation</a></td></tr><tr><td><a href="notebooks/html/machine_translation_transformers.html">Machine Translation with Transformers</a></td></tr><tr><td><a href="notebooks/html/masking_sequence_models.html">Masking in Sequence Models</a></td></tr><tr><td><a href="notebooks/html/mixture_of_experts_basics.html">Mixture of Experts (MoE)</a></td></tr><tr><td><a href="notebooks/html/llm_model_fine_tuning_overview.html">Model Fine-Tuning for LLMs — An Overview</a></td></tr><tr><td><a href="notebooks/html/multinomial_naive_bayes_basics.html">Multinomial Naive Bayes (Basics)</a></td></tr><tr><td><a href="notebooks/html/numpy_basic_tutorial.html">NumPy — Basic Tutorial</a></td></tr><tr><td><a href="notebooks/html/part_of_speech_tagging_basics.html">Part-of-Speech (POS) Tagging (Basics)</a></td></tr><tr><td><a href="notebooks/html/porter_stemmer.html">Porter Stemmer</a></td></tr><tr><td><a href="notebooks/html/positional_encodings_overview.html">Positional Encodings — Overview</a></td></tr><tr><td><a href="notebooks/html/recurrent_neural_networks_language_model.html">RNN-based Language Models</a></td></tr><tr><td><a href="notebooks/html/recurrent_neural_networks_basics.html">Recurrent Neural Networks — An Introduction</a></td></tr><tr><td><a href="notebooks/html/llm_resource_efficiency_overview.html">Resource-Efficient LLMs — An Overview</a></td></tr><tr><td><a href="notebooks/html/retrieval_augmented_generation_rag_basic_example.html">Retrieval-Augmented Generation (RAG) — A (Very) Basic Example</a></td></tr><tr><td><a href="notebooks/html/retrieval_augmented_generation_rag_basics.html">Retrieval-Augmented Generation (RAG) — Basics</a></td></tr><tr><td><a href="notebooks/html/positional_encodings_rope_basics.html">Rotary Position Embeddings (RoPE)</a></td></tr><tr><td><a href="notebooks/html/positional_encodings_original_transformer.html">Sinusoidal Positional Encodings (Original Transformer)</a></td></tr><tr><td><a href="notebooks/html/stemming_lemmatization_basics.html">Stemming &amp; Lemmatization</a></td></tr><tr><td><a href="notebooks/html/wordpiece_tokenization.html">Subword Tokenization (WordPiece)</a></td></tr><tr><td><a href="notebooks/html/text_classification_rnn.html">Text Classification with Recurrent Neural Networks (RNNs)</a></td></tr><tr><td><a href="notebooks/html/text_normalization_basics.html">Text Normalization</a></td></tr><tr><td><a href="notebooks/html/text_tokenization_basics.html">Text Tokenization</a></td></tr><tr><td><a href="notebooks/html/nn_linear_layer.html">The Linear Layer</a></td></tr><tr><td><a href="notebooks/html/linear_regression_math.html">The Math Behind Linear Regression</a></td></tr><tr><td><a href="notebooks/html/nn_softmax.html">The Softmax Function</a></td></tr><tr><td><a href="notebooks/html/text_token_indexing.html">Token Indexing with Vocabularies</a></td></tr><tr><td><a href="notebooks/html/word2vec_training_from_scratch.html">Training Word2Vec from Scratch</a></td></tr><tr><td><a href="notebooks/html/transformers_basic_architecture.html">Transformers — Basic Architecture</a></td></tr><tr><td><a href="notebooks/html/llm_local_inference_pretrained_models.html">Using Pretrained LLMs Locally — A Starter Guide</a></td></tr><tr><td><a href="notebooks/html/vector_space_model_basics.html">Vector Space Model</a></td></tr><tr><td><a href="notebooks/html/word_text_embeddings_overview.html">Word &amp; Text Embeddings — An Overview</a></td></tr><tr><td><a href="notebooks/html/batch_processing_sequence_tasks.html">Working with Batches for Sequence Tasks</a></td></tr><tr><td><a href="notebooks/html/llm_openai_api_basics.html">Working with the OpenAI API — An Introduction</a></td></tr></tbody>
+</table>
+</div>
+</section>
+<footer>
+<div class="container">
+<p>Copyright © 2025</p>
+</div>
+</footer>
+</body>
+</html>
