--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <!-- Internal CSS Styles -->
 <style>
         body {
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
-            margin: 2;
-            padding: 5;
             background-color: #f4f4f4;
             color: #111111;
             line-height: 1.25;
@@ -18,7 +18,6 @@
             width: 95%;
             margin: auto;
             overflow: hidden;
-            padding: 2px 0;
         }
         header {
             background: rgb(2 6 23);
@@ -27,7 +26,7 @@
             padding-bottom: 5px;
         }
         h1 {
-            margin-top: 0;
+            margin-top: 0px;
         }
         /* Default link style */
         a {
@@ -44,7 +43,7 @@
             margin-bottom: 3px;
         }
         .notebook-name {
-            padding: 3px 0px 3px 0px;
+            padding: 6px 0px 6px 0px;
         }
         .button-group {
             display: flex;
@@ -68,7 +67,7 @@
             background-color: #3366FF;
         }        
         section {
-            padding: 10px;
+            padding: 0px;
             background: #ffffff;
             margin-top: 0px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -89,7 +88,7 @@
 </header>
 <section id="main-content">
 <div class="container">
-<h2>Notebooks</h2>
+<h2>Notebooks — Overview</h2>
 <table id="notebook-table">
 <tbody>
 <!-- rows will be inserted here -->
